# near-contract-python-proof-of-concept

./: Cargo.toml  README.md
src/: freeze.py  lib.rs
tests/: test_basics.rs
